--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -44,8 +44,12 @@ jobs:
           - os: ubuntu-latest
             c_compiler: cl
 
+
     steps:
     - uses: actions/checkout@v3
+
+    - name: boost
+      run: sudo apt-get update && sudo apt install libboost-all-dev
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
@@ -53,9 +57,6 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
-
-    - name: boost
-      run: sudo apt-get update && sudo apt-get install -yq
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
