--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -51,9 +51,9 @@ jobs:
       run: sudo apt-get update && sudo apt install libboost-all-dev
       if: matrix.os == 'ubuntu-latest'
 
-    #- name: boost-windows
-    #  run: conda install -c conda-forge boost
-    #  if: matrix.os == 'windows-latest'
+    - name: boost-windows
+      run: choco install -y boost-msvc-14.1
+      if: matrix.os == 'windows-latest'
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
