--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -89,7 +89,7 @@ jobs:
       run: curl https://emi.nasdaq.com/ITCH/Nasdaq%20ITCH/01302019.NASDAQ_ITCH50.gz -o 01302019.NASDAQ_ITCH50.gz && tar -x 01302019.NASDAQ_ITCH50.gz && ./ITCH50_Hourly_VWAP.exe 01302019.NASDAQ_ITCH50
       if: matrix.os == 'windows-latest'
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: Download VWAP files
         path: ${{ steps.strings.outputs.build-output-dir }}/*.csv
