--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -91,5 +91,5 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: Download VWAP files
+        name: vwap_csv_files_${{ matrix.c_compiler }}
         path: ${{ steps.strings.outputs.build-output-dir }}/*.csv
