--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -52,7 +52,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
 
     - name: Install Boost (Windows)
-      run: choco install -y boost-msvc-14.3
+      run: choco install --no-progress -y boost-msvc-14.3
       if: matrix.os == 'windows-latest'
       
     - name: Set reusable strings
@@ -79,27 +79,25 @@ jobs:
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
-    - name: Prepare ITCH50 file
+    - name: Prepare ITCH50 file (Linux)
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       run: wget -q https://emi.nasdaq.com/ITCH/Nasdaq%20ITCH/01302019.NASDAQ_ITCH50.gz && gunzip -d 01302019.NASDAQ_ITCH50.gz
       if: matrix.os == 'ubuntu-latest'
 
-    - name: Prepare ITCH50 file
+    - name: Prepare ITCH50 file (Windows)
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       run: curl -s https://emi.nasdaq.com/ITCH/Nasdaq%20ITCH/01302019.NASDAQ_ITCH50.gz -o 01302019.NASDAQ_ITCH50.gz && 7z x 01302019.NASDAQ_ITCH50.gz -o01302019_NASDAQ_ITCH50
       if: matrix.os == 'windows-latest'
 
-    - name: Analyze ITCH50 file
+    - name: Analyze ITCH50 file (Linux)
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       run: /usr/bin/time -v ./ITCH50_Hourly_VWAP 01302019.NASDAQ_ITCH50
       if: matrix.os == 'ubuntu-latest'
 
-    - name: Analyze ITCH50 file
+    - name: Analyze ITCH50 file (Windows)
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       run: |
-        echo "C:\local\boost_1_84_0\lib64-msvc-14.3\" >> $GITHUB_PATH
-        echo "path -> $PATH"
-        echo "github_path -> $GITHUB_PATH"
+        echo "C:\local\boost_1_84_0\lib64-msvc-14.3\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
         ${{ steps.strings.outputs.build-output-dir }}\${{ matrix.build_type }}\ITCH50_Hourly_VWAP.exe 01302019_NASDAQ_ITCH50\01302019_NASDAQ_ITCH50
       if: matrix.os == 'windows-latest'
 
