--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -97,7 +97,7 @@ jobs:
     - name: Analyze ITCH50 file (Windows)
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       run: |
-        Add-Content $env:GITHUB_PATH "C:\local\boost_1_84_0\lib64-msvc-14.3\"
+        $env:path += ";C:\local\boost_1_84_0\lib64-msvc-14.3"
         ${{ steps.strings.outputs.build-output-dir }}\${{ matrix.build_type }}\ITCH50_Hourly_VWAP.exe 01302019_NASDAQ_ITCH50\01302019_NASDAQ_ITCH50
       if: matrix.os == 'windows-latest'
 
